--- a/src/tailwind/output.css
+++ b/src/tailwind/output.css
@@ -817,6 +817,10 @@ video {
   min-width: 180px;
 }
 
+.min-w-0 {
+  min-width: 0px;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
@@ -1234,12 +1238,21 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .text-left {
