--- a/src/tailwind/output.css
+++ b/src/tailwind/output.css
@@ -817,10 +817,6 @@ video {
   min-width: 180px;
 }
 
-.min-w-0 {
-  min-width: 0px;
-}
-
 .max-w-xs {
   max-width: 20rem;
 }
@@ -1078,6 +1074,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-none {
+  border-radius: 0px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1154,6 +1154,11 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
 }
 
+.bg-gray-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 7 18 / var(--tw-bg-opacity, 1));
+}
+
 .bg-purple-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1));
@@ -1168,12 +1173,16 @@ video {
   background-color: rgb(255 255 255 / 0.3);
 }
 
-.bg-opacity-30 {
-  --tw-bg-opacity: 0.3;
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-80 {
+  --tw-bg-opacity: 0.8;
+}
+
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 
 .bg-cover {
@@ -1238,21 +1247,12 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
 .pr-2 {
   padding-right: 0.5rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .text-left {
@@ -1367,6 +1367,10 @@ video {
 
 .no-underline {
   text-decoration-line: none;
+}
+
+.opacity-30 {
+  opacity: 0.3;
 }
 
 .opacity-50 {
